--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-icons": "4.2.0",
+    "react-modal": "3.12.1",
     "react-scripts": "4.0.3",
     "tachyons": "4.12.0",
     "web-vitals": "1.1.0"
